Entrega Final Clase 7

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,26 +11,59 @@
         <h2>Heroes</h2>
     </header>
     <main>
-            <section class="row">
+            <div class="row">
                 <div class="col-md">
-                    <img src="img/Mask Group.png" alt="mask">
+                    <div class="fondoHeroe">
+                        <img class="cabeceraHeroe" src="img/Mask Group.png">  
+                    </div>
+                    <div class="cuerpoHeroe">
+                        <img class="heart" src="img/heart.svg">
+                        <img class="avatar" src="img/Group 22.png"> 
+                    </div>
                     <h3>BATMAN</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam assumenda odio cupiditate molestiae repellat harum sit perspiciatis doloribus vero dolores minima inventore unde, ex laboriosam accusamus dignissimos. Debitis, odit reprehenderit.</p>
+                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
                     <button class="verMas">Ver mas</button>
                 </div>
+
                 <div class="col-md">
-                    <img src="img/Mask Group.png" alt="mask">
-                    <h3>Harley Quinn</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam assumenda odio cupiditate molestiae repellat harum sit perspiciatis doloribus vero dolores minima inventore unde, ex laboriosam accusamus dignissimos. Debitis, odit reprehenderit.</p>                    
-                    <button class="verMas">Ver mas</button>
-                </div>
-                <div class="col-md">
-                    <img src="img/Mask Group.png" alt="mask">
+                    <div class="fondoHeroe">
+                        <img class="cabeceraHeroe" src="img/Mask Group.png">  
+                    </div>
+                    <div class="cuerpoHeroe">
+                        <img class="heart" src="img/heart.svg">
+                        <img class="avatar" src="img/avatarharley.png"> 
+                    </div>
                     <h3>BATMAN</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam assumenda odio cupiditate molestiae repellat harum sit perspiciatis doloribus vero dolores minima inventore unde, ex laboriosam accusamus dignissimos. Debitis, odit reprehenderit.</p>              
+                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
                     <button class="verMas">Ver mas</button>
                 </div>
-            </section>
+
+                <div class="col-md">
+                    <div class="fondoHeroe">
+                        <img class="cabeceraHeroe" src="img/Mask Group.png">  
+                    </div>
+                    <div class="cuerpoHeroe">
+                        <img class="heart" src="img/heart.svg">
+                        <img class="avatar" src="img/Group 22.png"> 
+                    </div>
+                    <h3>BATMAN</h3>
+                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+                    <button class="verMas">Ver mas</button>
+                </div>
+
+                <div class="col-md">
+                    <div class="fondoHeroe">
+                        <img class="cabeceraHeroe" src="img/Mask Group.png">  
+                    </div>
+                    <div class="cuerpoHeroe">
+                        <img class="heart" src="img/heart.svg">
+                        <img class="avatar" src="img/avatarharley.png"> 
+                    </div>
+                    <h3>BATMAN</h3>
+                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing</p>
+                    <button class="verMas">Ver mas</button>
+                </div>
+            </div>
     </main>
     <footer>
         <h5>Todos los derechos reservados a FRONT END 1</h5>
